		 as_number twice as fast
2003-02-06 1.19: removed some needless return statements
		 removed debug printout "changing charset..."
		 added __END__ marker for faster loading
2003-04-07 1.20: added: scale()
		 as_number() uses _scale to scale output
2003-04-10 1.21: fixed: bug in UNIVERSAL::isa() call in from_number
2003-04-22 1.22: prefer Math::BigInt::GMP on use

############################################################################## 
Math::String::Charset:

2000-02-07 1.02: first version with bi-grams
2000-02-14 1.03: fixed: simple charsets to work now,
                 added: _end hash and _ones set
2000-02-16 1.04: added: char(), charlength()
2000-02-17 1.05: fixed: chars with diff. len raise error, works now with
                        characters of length > 1
                        some slight optimizations for simple charsets
2000-02-22 1.06: fixed: documentation (fill-characters, die on error)
			toggle $Math::String::Charset::die_on_error
		        num2str() is now about a small, constant amount faster
2000-03-18 1.07: fixed: documentation
		 added: separator string/char for 'the lazy fox' style strings
		 	renamed type() to order()
		 	documented that length() always returns count of chars
2000-03-25 1.08: added: next(), prev() for simple charsets (cache in M::S)
2000-06-26 1.09: fixed: bug accessing BigInt's internals, fails for BitVect etc
2000-09-01 1.10: split: into Charset, Nested and Grouped
                 fixed: next()/prev() work now
		 added: support for minlen, maxlen, ones(), type()
2000-10-19 1.11: fixed: Math::BigInt::bzero() => Math::BigInt->bero()
		 split Charset.pm into
			Math::String::Charset::Simple  (type = 0, order = 1)
			Math::String::Charset::Nested  (type = 0, order > 1)
			Math::String::Charset::Grouped (type = 1, order = 1)
	         added: support for minlen and maxlen
	                ones(), count(), zero(), one(), type() and tests
			next/prev actually work
			analyze is alias for study, can export analyze